team details page done

--- a/team_details.html
+++ b/team_details.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Our Team</title>
+  <title>Team Details</title>
   <link rel="preload" href="assets/fonts" as="font" crossorigin="anonymous">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
@@ -139,112 +139,130 @@
               </header>
               <!-- header section end -->
 
+            </div>
           </div>
         </div>
       </div>
+      <!-- bg video html end -->
     </div>
-    <!-- bg video html end -->
-  </div>
-  <!-- team details section start -->
-  <section class="lets_get_sec_bg team_details">
-    <div class="lets_get_sec_overlay">
-        <div class="container">
-            <div class="row">                   
-                <div class="col-md-12 team_details_box">
-                    <div class="col-md-4">
-                        <div class="image_back">
-                            
-                        </div>
-                        <img src="assets/images/news2.avif" alt="Jon photo">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-  </section>
-  <!-- team details section end -->
-  <!-- footer section start -->
-  <footer style="background-image: url(assets/images/hd_ft.avif);">
-    <div class="foote_overlay">
-      <div class="main_footer">
+    <!-- team details section start -->
+    <section class="lets_get_sec_bg team_details">
+      <div class="lets_get_sec_overlay">
         <div class="container">
           <div class="row">
-            <div class="col-md-4 cyber_heding_sec">
-              <div class="header_left footer_cyber_logo">
-                <img class="cyber_logo" src="assets/images/hdr_logo.png" alt="Cyber Jet Logo"> <span
-                  class="cyber_jet">Cyber<b>Jet</b> </span>
-              </div>
-              <p class="bannar_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum quia atque
-                accusamus iste provident nisi, ad corrupti culpa officiis dolore modi, excepturi non molestiae
-                facilis
-                dignissimos veniam fugiat.</p>
-            </div>
-            <div class="col-md-2">
-              <h2 class="foooter_about_us">
-                About Us
-              </h2>
-              <ul class="who_we_are_ul">
-                <li> <a href="about.html">About us</a>
-                </li>
-                <li> <a href="services.html">Services </a>
-                </li>
-                <li> <a href="our_team.html">Our Team</a> </li>
-                <li> <a href="pricing.html">Pricing</a>
-                </li>
-                <li> <a href="blog.html">Blog</a>
-                </li>
-                <li> <a href="pricing.html">Pricing</a>
-                </li>
-                <li> <a href="contact.html">Contact Us</a>
-                </li>
-
-              </ul>
-            </div>
-            <div class="col-md-2 our_services">
-              <h2 class="foooter_about_us">
-                Our Services
-              </h2>
-              <ul class="who_we_are_ul">
-                <li> <a href="#">121 King street melbourne,</a>
-                </li>
-                <li> <a href="#">3000 Australia</a>
-                </li>
-                <li> <a href="#">info@cyberjet.com</a>
-                </li>
-                <li> <a href="#">+123456789</a>
-                </li>
-              </ul>
-              <div class="social_icons_footer">
-                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
-              </div>
-            </div>
-            <div class="col-md-4 sing_up_newsletter">
-              <h2 class="foooter_about_us">
-                Sing Up For Newsletter
-              </h2>
-              <form action="#" method="post">
-                <div class="input_email">
-                  <input type="email" name="useremail" placeholder="Enter your email"><i
-                    class="fa-solid fa-paper-plane"></i>
+            <div class="col-md-12 team_details_box">
+              <div class="col-md-4">
+                <div class="image_back">
                 </div>
-
-                <div class="input_checkbox"> <input type="checkbox" id="terms"> <label for="terms"> i agree to the
-                    terms,Privecy Policy </label> </div>
-              </form>
+                <img src="assets/images/news2.avif" alt="Jon photo">
+              </div>
+              <div class="col-md-8">
+                <h2 class="team_details">Team Details</h2>
+                <div class="team_details_innr_boxes">
+                  <p class="team_member_details">Name: Latri Mera Basa </p>
+                </div>
+                <div class="team_details_innr_boxes">
+                  <p class="team_member_details"> About: Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque placeat qui, autem expedita ut quos! Tempore minus ipsam laudantium iure velit earum, modi inventore quod pariatur ut dolore dolorem odit. </p>
+                </div>
+                <div class="team_details_innr_boxes">
+                  <p class="team_member_details"> Cell: +256856685526985 </p>
+                </div>
+                <div class="team_details_innr_boxes">
+                  <div class="team_member_details"> Flow Us: 
+                    <a href="#" class="teamember_social_icon"><i class="fa-brands fa-facebook-f"></i></a> 
+                    <a href="#" class="teamember_social_icon"><i class="fa-brands fa-twitter"></i></a> 
+                    <a href="#" class="teamember_social_icon"><i class="fa-brands fa-instagram"></i></a> 
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="footer_ending">
-        <div class="container">
-          <p class="bannar_text">Cyberjet Copyright @ 2023. All Right Reserved.</p>
+    </section>
+    <!-- team details section end -->
+    <!-- footer section start -->
+    <footer style="background-image: url(assets/images/hd_ft.avif);">
+      <div class="foote_overlay">
+        <div class="main_footer">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-4 cyber_heding_sec">
+                <div class="header_left footer_cyber_logo">
+                  <img class="cyber_logo" src="assets/images/hdr_logo.png" alt="Cyber Jet Logo"> <span
+                    class="cyber_jet">Cyber<b>Jet</b> </span>
+                </div>
+                <p class="bannar_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum quia atque
+                  accusamus iste provident nisi, ad corrupti culpa officiis dolore modi, excepturi non molestiae
+                  facilis
+                  dignissimos veniam fugiat.</p>
+              </div>
+              <div class="col-md-2">
+                <h2 class="foooter_about_us">
+                  About Us
+                </h2>
+                <ul class="who_we_are_ul">
+                  <li> <a href="about.html">About us</a>
+                  </li>
+                  <li> <a href="services.html">Services </a>
+                  </li>
+                  <li> <a href="our_team.html">Our Team</a> </li>
+                  <li> <a href="pricing.html">Pricing</a>
+                  </li>
+                  <li> <a href="blog.html">Blog</a>
+                  </li>
+                  <li> <a href="pricing.html">Pricing</a>
+                  </li>
+                  <li> <a href="contact.html">Contact Us</a>
+                  </li>
+
+                </ul>
+              </div>
+              <div class="col-md-2 our_services">
+                <h2 class="foooter_about_us">
+                  Our Services
+                </h2>
+                <ul class="who_we_are_ul">
+                  <li> <a href="#">121 King street melbourne,</a>
+                  </li>
+                  <li> <a href="#">3000 Australia</a>
+                  </li>
+                  <li> <a href="#">info@cyberjet.com</a>
+                  </li>
+                  <li> <a href="#">+123456789</a>
+                  </li>
+                </ul>
+                <div class="social_icons_footer">
+                  <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                  <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                  <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                </div>
+              </div>
+              <div class="col-md-4 sing_up_newsletter">
+                <h2 class="foooter_about_us">
+                  Sing Up For Newsletter
+                </h2>
+                <form action="#" method="post">
+                  <div class="input_email">
+                    <input type="email" name="useremail" placeholder="Enter your email"><i
+                      class="fa-solid fa-paper-plane"></i>
+                  </div>
+
+                  <div class="input_checkbox"> <input type="checkbox" id="terms"> <label for="terms"> i agree to the
+                      terms,Privecy Policy </label> </div>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="footer_ending">
+          <div class="container">
+            <p class="bannar_text">Cyberjet Copyright @ 2023. All Right Reserved.</p>
+          </div>
         </div>
       </div>
-    </div>
-  </footer>
-  <!-- footer section end -->
+    </footer>
+    <!-- footer section end -->
   </div>
   <!-- mmenu js start -->
   <script src="assets/js/mmenu-light.js"></script>
